[gd_scene load_steps=9 format=3 uid="uid://bvcj6qe4ejd8k"]

[ext_resource type="Texture2D" uid="uid://cfvbx5510oq1o" path="res://Sprites/dollar.png" id="1_a5hps"]
[ext_resource type="Script" uid="uid://bn8si3ceu8npx" path="res://Scripts/Counter.gd" id="1_kqog5"]
[ext_resource type="Script" uid="uid://billr0gixlytx" path="res://Scripts/Extra.gd" id="1_oss8w"]
[ext_resource type="Script" uid="uid://ddak1c14lxvje" path="res://Scenes/Menus_Interactions.gd" id="4_b3i5h"]
[ext_resource type="Texture2D" uid="uid://bgixaqm1a5kbu" path="res://Sprites/Placeholder images/Custom placeholder.png" id="4_is6ib"]
[ext_resource type="Texture2D" uid="uid://cfovc2jo6at3l" path="res://Sprites/Placeholder images/setting placeholder.png" id="4_oss8w"]
[ext_resource type="Texture2D" uid="uid://bblxwa3dj8uoc" path="res://Sprites/Placeholder images/piggy.png" id="4_pl8e4"]
[ext_resource type="PackedScene" uid="uid://dxaurdtg58xtt" path="res://Scenes/main_clicker_scene.tscn" id="8_b3i5h"]

[node name="Main" type="Node"]
script = ExtResource("1_oss8w")

[node name="Counter" type="PanelContainer" parent="."]
z_index = 2
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.052
offset_bottom = 49.08
grow_horizontal = 2
script = ExtResource("1_kqog5")

[node name="HBoxContainer" type="HBoxContainer" parent="Counter"]
layout_mode = 2

[node name="Dollar" type="TextureRect" parent="Counter/HBoxContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("1_a5hps")

[node name="Money Output" type="RichTextLabel" parent="Counter/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/default_color = Color(0.243137, 0.643137, 0.27451, 1)
theme_override_colors/font_selected_color = Color(0.243387, 0.641238, 0.274796, 1)
theme_override_font_sizes/normal_font_size = 32
text = "Place holder"
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Counter/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="CPS" type="RichTextLabel" parent="Counter/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(5, 50)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_colors/font_selected_color = Color(0.243387, 0.641238, 0.274796, 1)
theme_override_font_sizes/normal_font_size = 20
text = "Place holder"
horizontal_alignment = 2
vertical_alignment = 2

[node name="Clicks" type="RichTextLabel" parent="Counter/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_colors/font_selected_color = Color(0.243387, 0.641238, 0.274796, 1)
theme_override_font_sizes/normal_font_size = 20
text = "Place holder"
horizontal_alignment = 2
vertical_alignment = 2

[node name="Menu-Buttons" type="PanelContainer" parent="."]
z_index = 2
anchors_preset = -1
anchor_top = 0.946
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -52.16
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("4_b3i5h")

[node name="HBoxContainer" type="HBoxContainer" parent="Menu-Buttons"]
layout_mode = 2

[node name="Custom" type="TextureButton" parent="Menu-Buttons/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("4_is6ib")
ignore_texture_size = true
stretch_mode = 5

[node name="Shop" type="TextureButton" parent="Menu-Buttons/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("4_pl8e4")
ignore_texture_size = true
stretch_mode = 5

[node name="Settings" type="TextureButton" parent="Menu-Buttons/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("4_oss8w")
ignore_texture_size = true
stretch_mode = 5

[node name="BuildVersion" type="RichTextLabel" parent="."]
z_index = 2
anchors_preset = -1
anchor_top = 0.874
anchor_right = 0.215
anchor_bottom = 1.0
offset_top = -15.04
offset_right = -0.0999985
offset_bottom = -105.0
grow_vertical = 0
size_flags_horizontal = 3
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_colors/font_selected_color = Color(0.243387, 0.641238, 0.274796, 1)
text = "Place holder"
fit_content = true
vertical_alignment = 2

[node name="Settings" type="Panel" parent="."]
z_index = 3
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TabContainer" type="TabContainer" parent="Settings"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.059375
anchor_right = 1.0
anchor_bottom = 0.930208
grow_horizontal = 2
grow_vertical = 2
current_tab = 0
metadata/_edit_use_anchors_ = true

[node name="Visuals" type="TabBar" parent="Settings/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="MarginContainer" type="MarginContainer" parent="Settings/TabContainer/Visuals"]
layout_mode = 2
anchor_top = 0.0333692
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30
metadata/_edit_use_anchors_ = true

[node name="Test" type="Label" parent="Settings/TabContainer/Visuals/MarginContainer"]
layout_mode = 2
text = "Hi ths is a test. :]"
vertical_alignment = 1

[node name="Title" type="Label" parent="Settings"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.0666667
grow_horizontal = 2
theme_override_font_sizes/font_size = 40
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1
text_overrun_behavior = 2
metadata/_edit_use_anchors_ = true

[node name="Return" type="Button" parent="Settings"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.935417
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 40
action_mode = 0
text = "Return"
autowrap_mode = 3
metadata/_edit_use_anchors_ = true

[node name="Added scene here" type="Node" parent="."]

[node name="Main-Clicker-Scene" parent="Added scene here" instance=ExtResource("8_b3i5h")]

[connection signal="toggled" from="Menu-Buttons/HBoxContainer/Custom" to="Menu-Buttons" method="_on_custom_toggled"]
[connection signal="pressed" from="Menu-Buttons/HBoxContainer/Shop" to="Menu-Buttons" method="_on_shop_pressed"]
[connection signal="pressed" from="Menu-Buttons/HBoxContainer/Settings" to="Menu-Buttons" method="_on_settings_pressed"]
